Added photographs and split into submenus.

--- a/static-sidebar.css
+++ b/static-sidebar.css
@@ -30,7 +30,8 @@ body {
 
 #menublock {
   background-color: white;
-  height: 267px;
+  height: 357px;
+  /*height: 267px;*/
 }
 
 /* The navigation menu links */
