--- a/static-sidebar.css
+++ b/static-sidebar.css
@@ -122,11 +122,11 @@ header {
 }
 
 .indexfirst {
-  font-size: 125px;
+  font-size: 6vw;
 }
 
 .indexsecond {
-  font-size: 100px;
+  font-size: 5.2vw;
 }
 
 .indexsecond a {
@@ -144,11 +144,11 @@ header {
 }
 
 .comicsfirst {
-  font-size: 125px;
+  font-size: 6vw;
 }
 
 .comicssecond {
-  font-size: 100px;
+  font-size: 5.2vw;
 }
 
 .comicssecond a {
@@ -166,11 +166,11 @@ header {
 }
 
 .photofirst {
-  font-size: 125px;
+  font-size: 6vw;
 }
 
 .photosecond {
-  font-size: 100px;
+  font-size: 5.2vw;
 }
 
 .photosecond a {
