Cleaned up files and fixed navigation menu so that overflow is hidden.

--- a/static-sidebar.css
+++ b/static-sidebar.css
@@ -1,67 +1,40 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Style the body */
 body {
   font-family: 'Arimo', sans-serif;
-  padding: 0;
-}
-
-/* Style images that are to be responsive. */
-.responsive {
-  width: 100%;
-  max-width: 1200px;
-  height: auto;
-  align-content: center;
-  justify-content: center;
+  margin: 0;
 }
 
 /* The sidebar menu */
 .sidenav {
-    width: 112px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0px; /* Stay at the top */
-    left: 0;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 15px;
-}
-
-#menublock {
+  width: 112px; /* Set the width of the sidebar */
+  height: 346px;
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-y: hidden;
   background-color: white;
-  height: 357px;
-  /*height: 267px;*/
 }
 
 /* The navigation menu links */
 .sidenav a {
+  color: black;
   padding-top: 7px;
   padding-left: 16px;
   text-decoration: none;
-  color: black;
   display: block;
 }
 
-.link-title {
-  font-size: 16px;
-}
-
+/* The following six rules relate to the links in the navigation menu. */
 .homepage-title {
   font-size: 26px;
   font-weight: bold;
   padding-bottom: 25px;
-}
-
-.sub-title {
-  font-size: 14px;
-  margin-left: 12px;
-  font-style: italic;
-}
-
-.link-title.active {
-  font-size: 16px;
-  color: grey;
 }
 
 .homepage-title.active {
@@ -70,6 +43,22 @@ body {
   padding-bottom: 25px;
   color: black;
 }
+
+.link-title {
+  font-size: 16px;
+}
+
+.link-title.active {
+  font-size: 16px;
+  color: grey;
+}
+
+.sub-title {
+  font-size: 14px;
+  margin-left: 12px;
+  font-style: italic;
+}
+
 .sub-title.active {
   font-size: 14px;
   margin-left: 12px;
@@ -84,6 +73,14 @@ body {
   padding: 0px 10px;
 }
 
+.responsive {
+  width: 100%;
+  max-width: 1200px;
+  height: auto;
+  align-content: center;
+  justify-content: center;
+}
+
 #carousel {
   margin-left: 200px;
   width: 100%;
@@ -93,25 +90,17 @@ body {
   white-space: nowrap;
 }
 
-header {
-  height: 0px;
-}
-
 
 #carousel .slide {
   display: inline-block;
 }
 
+/* Width of the blog content. */
 .blogcontent {
   width: 60%;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-}
-
+/* The next five rules relate to the styling of the main content on the homepage. */
 .indexpage {
   background-color: #ffbb99;
 }
@@ -134,6 +123,7 @@ header {
   color: plum
 }
 
+/* The next five rules relate to the styling of the main content on the comics page. */
 .comicspage {
   background-color: #36560A;
 }
@@ -156,6 +146,7 @@ header {
   color: #E4B22B;
 }
 
+/* The next five rules relate to the styling of the main content on the photo page. */
 .photopage {
   background-color: #0C6F89;
 }
@@ -177,5 +168,3 @@ header {
   text-decoration: none;
   color: #D99333;
 }
-
-
