--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ body {
 }
 
 .responsive {
-  height:75%;
+  height: 100%;
+  max-height: 750px;
   width: auto;
   padding: 30px 50px 30px 50px;
   display: block;
