--- a/style.css
+++ b/style.css
@@ -14,6 +14,20 @@ body {
   margin-top: 70px;
 }
 
+.aboutme-img {
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 500px;
+  display:block;
+  padding-bottom: 40px;
+}
+
+.aboutme-content {
+  width: 800px;
+  margin-top:70px;
+}
+
 /* The sidebar menu */
 .sidenav {
   width: 250px;
@@ -40,6 +54,20 @@ body {
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+
+.content-link {
+  color: black;
+  text-decoration: underline;
+}
+
+.content-link:visited {
+  color: grey;
+  text-decoration: underline;
+}
+
+.content-link:hover {
+  text-decoration: none;
 }
 
 .dropdown-container {
@@ -102,6 +130,20 @@ body {
   .content {
     margin: 0px 0px 0px 0px;
     padding: 10px 10px 10px 10px
+  }
+
+  .aboutme-img {
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 10px 10px 10px;
+  }
+
+  .aboutme-content {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    padding: 10px 10px 10px 10px;
   }
 
   .responsive {
