--- a/style.css
+++ b/style.css
@@ -5,32 +5,41 @@
 /* Style the body */
 body {
   font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 10px;
   margin: 0;
 }
 
 /* Main content of the page. */
 .content {
-  margin-left: 250px;
-  margin-top: 70px;
+  margin-left: 350px;
+  margin-top: 50px;
+  margin-right: 250px;
 }
 
 .aboutme-img {
   width: auto;
-  margin-left: auto;
+  margin-left: 0;
   margin-right: auto;
   max-height: 500px;
   display:block;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 
 .aboutme-content {
   width: 800px;
-  margin-top:70px;
+  margin-top: 70px;
+  font-size: 1.6em;
+}
+
+.aboutme-content h1 {
+  font-weight: normal !important;
+  font-size: 1.8em;
+  margin-top: 0;
 }
 
 /* The sidebar menu */
 .sidenav {
-  width: 250px;
+  width: 300px;
   height: 100%;
   position: fixed;
   z-index: 1;
@@ -38,22 +47,27 @@ body {
   left: 0;
   overflow-x: hidden;
   background-color: white;
-  padding-top: 50px;
+  margin-top: 50px;
 }
 
 /* The navigation menu links */
 .sidenav a, .dropdown-btn {
   font-family: 'IBM Plex Sans', sans-serif;
   color: black;
-  padding: 7px 1px 7px 50px;
+  margin: 7px 1px 7px 30px;
   text-decoration: none;
   display: block;
+  border: solid;
   border: none;
   background: none;
   width: 100%;
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+
+.sidenav a, button {
+  padding: 0;
 }
 
 .content-link {
@@ -70,9 +84,21 @@ body {
   text-decoration: none;
 }
 
-.dropdown-container {
+.dropdown-container:first-child {
+  margin-left: 50px;
+}
+
+.dropdown-container:not(:first-child) {
   display: none;
-  padding: 10px 1px 10px 15px;
+  padding: 10px 1px 10px 0px;
+  margin-left: 30px;
+  border-left: solid;
+  border-left-color: lightgrey;
+  border-left-width: 0.01em;
+}
+
+.dropdown-container .nav-option {
+  margin-left: 30px;
 }
 
 .dropdown-container.clicked {
@@ -84,9 +110,6 @@ body {
 }
 
 .nav-title-container {
-  padding-bottom: 40px;
-  font-size: 26px;
-  font-weight: bold;
   padding-bottom: 10px;
 }
 
@@ -95,21 +118,68 @@ body {
 }
 
 .nav-option {
-  font-size: 16px;
+  font-size: 1.8em;
+  font-weight: 100;
 }
 
 .responsive {
   height: 100%;
   max-height: 900px;
   width: auto;
-  padding: 30px 50px 30px 50px;
+  padding: 30px 50px 30px 0px;
   display: block;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-bottom: 60px
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 /* Width of the blog content. */
 .blogpost {
-  padding-left: 40px;
+  font-size: 1.6em;
+  margin-left: 40px;
   width: 75%;
+  border-bottom: solid;
+  border-bottom-width: 0.01em;
+  border-bottom-color: lightgrey;
+}
+
+.blogpost img {
+  max-width: 80%;
+  height: auto;
+  margin: 50px auto 50px auto;
+  padding: 0;
+}
+
+.blogpost h1, .blogpost h2, .blogpost p {
+  font-weight: 100;
+}
+
+.blogpost h1 {
+  font-size: 1.8em;
+  margin-bottom: 0;
+}
+
+.blogpost h2 {
+  font-size: 0.75em;
+  margin-top: 0;
+  color: grey;
 }
 
 .icon-bar {
