--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .content {
   margin-left: 350px;
   margin-top: 50px;
-  margin-right: 250px;
+  margin-right: 10em;
 }
 
 .aboutme-img {
@@ -117,13 +117,17 @@ body {
   width: 200px;
 }
 
+#homepage-image {
+  margin: 0;
+}
+
 .nav-option {
   font-size: 1.8em;
   font-weight: 100;
 }
 
 .responsive {
-  height: 100%;
+  height: 90%;
   max-height: 900px;
   width: auto;
   padding: 30px 50px 30px 0px;
