--- a/style.css
+++ b/style.css
@@ -1,249 +1,109 @@
-* {
-  box-sizing: border-box;
+/*-------------------- Basic Elements --------------------*/
+
+html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
-/* Style the body */
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
+  margin: 0;
+  padding: 0;
   font-size: 10px;
+}
+
+/*-------------------- Specific divs --------------------*/
+
+/* Navigation */
+
+[role=navigation] {
+  display: block;
   margin: 0;
+  padding: 0;
+  background: clear;
 }
 
-/* Main content of the page. */
-.content {
-  margin-left: 250px;
-  margin-top: 50px;
-  margin-right: 10em;
+[role=navigation]:hover {
+  background: white;
 }
 
-.aboutme-img {
-  width: auto;
-  margin-left: 0;
-  margin-right: auto;
-  max-height: 500px;
-  display:block;
-  padding-bottom: 30px;
+#logo {
+  width: 18em;
+  padding: 1em 1em 1em 3em;
 }
 
-.aboutme-content {
-  width: 800px;
-  margin-top: 70px;
+.nav-options {
+  position: absolute;
+  top: 4em;
+  right: 4em;
+}
+
+[role=navigation] ul {
+  margin: 0;
+  padding: 0;
+}
+
+[role=navigation] li {
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  padding-left: 3em;
+}
+
+a.nav-option {
   font-size: 1.6em;
+  letter-spacing: 0.13em;
+  font-style: thin;
+  color: grey;
+  text-decoration: none;
 }
 
-.aboutme-content h1 {
-  font-weight: normal !important;
-  font-size: 1.8em;
-  margin-top: 0;
+a.active {
+  color: black !important; 
 }
 
-/* The sidebar menu */
-.sidenav {
-  width: 250px;
+a:active.nav-option, a:hover.nav-option {
+  text-decoration: none;
+  color: black;
+}
+
+/* Main content */
+
+[role=main] {
+  margin: 0;
+  padding: 0;
+  width: 100%;
   height: 100%;
+  display: flex;
+}
+
+.main-content {
+  flex: 3;
+  margin: 0;
+  padding: 0;
+}
+
+.main-info {
+  flex: 1;
+  min-width: 150px;
+  margin: 30px 30px 30px 30px;
+  padding: 0;
+}
+
+.sketch-wrapper {
   position: fixed;
-  z-index: 1;
   top: 0;
   left: 0;
-  overflow-x: hidden;
-  background-color: white;
-  margin-top: 50px;
-}
-
-/* The navigation menu links */
-.sidenav a, .dropdown-btn {
-  font-family: 'IBM Plex Sans', sans-serif;
-  color: black;
-  margin: 7px 1px 7px 30px;
-  text-decoration: none;
-  display: block;
-  border: solid;
-  border: none;
-  background: none;
-  width: 100%;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
-}
-
-.sidenav a, button {
-  padding: 0;
-}
-
-.content-link {
-  color: black;
-  text-decoration: underline;
-}
-
-.content-link:visited {
-  color: grey;
-  text-decoration: underline;
-}
-
-.content-link:hover {
-  text-decoration: none;
-}
-
-.dropdown-container:first-child {
-  margin-left: 50px;
-}
-
-.dropdown-container:not(:first-child) {
-  display: none;
-  padding: 10px 1px 10px 0px;
-  margin-left: 30px;
-  border-left: solid;
-  border-left-color: lightgrey;
-  border-left-width: 0.01em;
-}
-
-.dropdown-container .nav-option {
-  margin-left: 30px;
-}
-
-.dropdown-container.clicked {
-  display: block;
-}
-
-.top-nav-small {
-  display: none;
-}
-
-.nav-title-container {
-  padding-bottom: 10px;
-}
-
-#title-image {
-  width: 200px;
-}
-
-#homepage-image {
   margin: 0;
-}
-
-.nav-option {
-  font-size: 1.8em;
-  font-weight: 100;
-}
-
-.responsive {
-  height: 90%;
-  max-height: 900px;
-  width: auto;
-  padding: 30px 50px 30px 0px;
-  display: block;
-}
-
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  margin-bottom: 60px
-}
-
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  /* 
+    Had to set this to 1px to avoid margin collapsing. See: 
+    https://stackoverflow.com/questions/31607465/css-viewport-height100vh-doesnt-work-correctly-with-content-in-the-div?rq=1 
+  */
+  padding: 1px;
+  width: 100vw;
   height: 100%;
-  position: absolute;
 }
 
-/* Width of the blog content. */
-.blogpost {
-  font-size: 1.6em;
-  margin-left: 40px;
-  width: 75%;
-  border-bottom: solid;
-  border-bottom-width: 0.01em;
-  border-bottom-color: lightgrey;
-}
+@media only screen and (max-width: 850px) {
 
-.blogpost img {
-  max-width: 80%;
-  height: auto;
-  margin: 50px auto 50px auto;
-  padding: 0;
-}
-
-.blogpost h1, .blogpost h2, .blogpost p {
-  font-weight: 100;
-}
-
-.blogpost h1 {
-  font-size: 1.8em;
-  margin-bottom: 0;
-}
-
-.blogpost h2 {
-  font-size: 0.75em;
-  margin-top: 0;
-  color: grey;
-}
-
-.icon-bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding-bottom: 50px;
-}
-
-#sketch-container {
-  margin: 0; 
-  margin-left: 250px; 
-  height: 99.5vh;
-}
-
-@media only screen and (max-width:850px) {
-  /* For mobile phones: */
-  .sidenav {
-    position: static;
-    width: 100%;
-    height: auto;
-  }
-
-  .content {
-    margin: 0px 0px 0px 0px;
-    padding: 10px 10px 10px 10px
-  }
-
-  .aboutme-img {
-    width: auto;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 10px 10px 10px;
-  }
-
-  .aboutme-content {
-    width: 100%;
-    margin: 0px 0px 0px 0px;
-    padding: 10px 10px 10px 10px;
-  }
-
-  .responsive {
-    width: 100%;
-    height: auto;
-    padding: 10px 5px 10px 5px
-  }
-
-  .blogpost {
-    padding: 10px 10px 10px 10px;
-    width: 100%;
-  }
-
-  .icon-bar {
-    position: relative;
-    padding-bottom: 0px;
-  }
-
-  #sketch-container {
-    margin: 0;  
-    height: 99.5vh;
-  }
 }
