--- a/style.css
+++ b/style.css
@@ -3,107 +3,150 @@
 html {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Inconsolata', monospace;
+  font-size: 10px;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 /*-------------------- Specific divs --------------------*/
 
-/* Navigation */
-
-[role=navigation] {
-  display: block;
-  margin: 0;
-  padding: 0;
-  background: clear;
-}
-
-[role=navigation]:hover {
-  background: white;
-}
-
-#logo {
-  width: 18em;
-  padding: 1em 1em 1em 3em;
-}
-
-.nav-options {
-  position: absolute;
-  top: 4em;
-  right: 4em;
-}
-
-[role=navigation] ul {
-  margin: 0;
-  padding: 0;
-}
-
-[role=navigation] li {
-  display: inline-block;
-  list-style-type: none;
-  margin: 0;
-  padding-left: 3em;
-}
-
-a.nav-option {
-  font-size: 1.6em;
-  letter-spacing: 0.13em;
-  font-style: thin;
-  color: grey;
-  text-decoration: none;
-}
-
-a.active {
-  color: black !important; 
-}
-
-a:active.nav-option, a:hover.nav-option {
-  text-decoration: none;
-  color: black;
-}
-
-/* Main content */
-
-[role=main] {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.sidenav-wrapper {
+  padding: 1em 1em 1em 1em;
   height: 100%;
-  display: flex;
-}
-
-.main-content {
-  flex: 3;
-  margin: 0;
-  padding: 0;
-}
-
-.main-info {
-  flex: 1;
-  min-width: 150px;
-  margin: 30px 30px 30px 30px;
-  padding: 0;
-}
-
-.sketch-wrapper {
+  width: 15em;
   position: fixed;
   top: 0;
   left: 0;
-  margin: 0;
-  /* 
-    Had to set this to 1px to avoid margin collapsing. See: 
-    https://stackoverflow.com/questions/31607465/css-viewport-height100vh-doesnt-work-correctly-with-content-in-the-div?rq=1 
-  */
-  padding: 1px;
-  width: 100vw;
-  height: 100%;
+  z-index: 1;
+  overflow-x: hidden;
 }
 
-@media only screen and (max-width: 850px) {
+.sidenav-wrapper:hover {
+  background-color: white;
+}
 
+.sidenav {
+  margin: 0;
+  padding: 2em 0 0 0;
+}
+
+.sidenav a, .dropdown-btn, .title {
+  text-decoration: none;
+  margin: 0;
+  padding: 0.15em 0em 0.15em 0em;
+  font-size: 1.8em;
+  color: black;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  outline: none;
+}
+
+.title {
+  margin: 0;
+  padding: 0;
+  font-size: 3.8em;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  width: 3em;
+}
+
+a #title-image {
+  position: absolute;
+  bottom: 0;
+  width: 15em;
+  padding-bottom: 3em;
+}
+
+.sidenav a:hover, .dropdown-btn:hover, .title:hover {
+  color: rgb(0, 255, 255);
+}
+
+.active {
+  color: rgb(0, 255, 255);
+}
+
+.dropdown-container {
+  display: none;
+  padding: 2em 0em 2em 1em;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: rgb(0, 255, 255);
+}
+
+main {
+
+}
+
+.scrolls {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  height: 100vh;
+}
+
+.responsive-image:first-child {
+  margin-left: 18em !important;
+}
+
+.responsive-image {
+  display: inline-block;
+  height: 100vh;
+  width: auto;
+  cursor: pointer;
+  padding: 5em 2em;
+}
+
+.topnav-wrapper {
+  display: none;
+}
+
+@media screen and (max-width: 850px) {
+  .sidenav-wrapper {
+    display: none;
+  }
+
+  main {
+    display: block;
+    position: absolute;
+    top: 7em;
+    width: 100%;
+  }
+
+  .topnav-wrapper {
+    display: block;
+    padding: 1em 1em 1em 1em;
+    margin: 0;
+    width: 100%;
+    height: 7em;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .topnav {
+    display: block;
+  }
+
+  a #title-image {
+    padding: 0;
+    position: absolute;
+    top: 1em;
+    left: 1em;
+  }
+
+  .hamburger {
+    float: right;
+    text-align: right;
+    display: block;
+  }
 }
