--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html {
 body {
   margin: 0;
   padding: 0;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 100vh;
+  white-space: nowrap;
 }
 
 * {
@@ -27,6 +31,8 @@ body {
   left: 0;
   z-index: 1;
   overflow-x: hidden;
+  -webkit-transition: background-color 0.4s; /* Safari */
+  transition: background-color 0.4s;
 }
 
 .sidenav-wrapper:hover {
@@ -40,6 +46,7 @@ body {
 
 .sidenav a, .dropdown-btn, .title {
   text-decoration: none;
+  font-family: 'Inconsolata', monospace;
   margin: 0;
   padding: 0.15em 0em 0.15em 0em;
   font-size: 1.8em;
@@ -64,16 +71,16 @@ body {
 a #title-image {
   position: absolute;
   bottom: 0;
-  width: 15em;
+  width: 13em !important;
   padding-bottom: 3em;
 }
 
 .sidenav a:hover, .dropdown-btn:hover, .title:hover {
-  color: rgb(0, 255, 255);
+  color: blue;
 }
 
 .active {
-  color: rgb(0, 255, 255);
+  color:blue;
 }
 
 .dropdown-container {
@@ -81,18 +88,7 @@ a #title-image {
   padding: 2em 0em 2em 1em;
   border-left-style: solid;
   border-left-width: 1px;
-  border-left-color: rgb(0, 255, 255);
-}
-
-main {
-
-}
-
-.scrolls {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
-  height: 100vh;
+  border-left-color: blue;
 }
 
 .responsive-image:first-child {
@@ -104,8 +100,113 @@ main {
   height: 100vh;
   width: auto;
   cursor: pointer;
-  padding: 5em 2em;
+  padding: 4em 2em 4em 2em;
 }
+
+.embed-container {
+  display: inline-block; 
+  padding: 4em 2em 4em 2em;
+  width: 80vw;
+  height: 100vh; 
+  overflow: hidden; 
+}
+
+.embed-container:first-child {
+  margin-left: 18em !important;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed { 
+  width: 100%; 
+  height: 100%; 
+}
+
+.sketch-container {
+  display: inline-block;
+  padding: 4em 2em 4em 2em;
+  width: 80vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.sketch-container:first-child {
+  margin-left: 18em !important;
+}
+
+.sketch-container iframe, .sketch-container object, .sketch-container embed { 
+  width: 100%; 
+  height: 100%; 
+}
+
+.blog-container {
+  margin-left: 18em;
+  margin-top: 2em;
+  width: 60vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-entry {
+  width: 100%;
+  font-size: 1.6em;
+  white-space: normal;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: lightgrey;
+  margin-bottom: 5em;
+}
+
+.blog-image {
+  width: 100%;
+  display: block;
+
+}
+
+.about-container {
+  margin-left: 18em;
+  margin-top: 2em;
+  width: 85vw;
+  height: 90vh;
+  display: grid;
+  grid-template-rows: 50% 1fr;
+  grid-template-columns: 28em 1fr;
+  grid-template-areas:
+    "image content"
+    "icons content"
+}
+
+.about-image {
+  grid-area: image;
+  float: right;
+  width: 30em;
+}
+
+.icon-container {
+  grid-area: icons;
+  float: right;
+}
+
+.about-media #icon {
+  float: right;
+  width: 10%;
+  max-width: 5em;
+  padding: 0;
+  margin: 1em;
+}
+
+.about-content {
+  grid-area: content;
+  width: 60%;
+  max-width: 20em;
+  margin-left: 2em;
+  font-size: 1.6em;
+  white-space: normal;
+  float: left;
+}
+
+.about-content h1 {
+  margin-top: 0;
+}
+
 
 .topnav-wrapper {
   display: none;
@@ -116,37 +217,190 @@ main {
     display: none;
   }
 
-  main {
-    display: block;
-    position: absolute;
-    top: 7em;
-    width: 100%;
+  body { 
+    overflow-x: hidden;
+    overflow-y: scroll !important;
+    width: 100vw;
+    white-space: wrap;
+    height: 100vh;
   }
 
   .topnav-wrapper {
     display: block;
-    padding: 1em 1em 1em 1em;
     margin: 0;
+    padding: 0.5em;
+    padding-bottom: 1.2em;
     width: 100%;
-    height: 7em;
+    height: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: white;
+  }
+  
+  .topnav {
+    margin: 0;
+    padding: 0;
+  }
+  
+  a #title-image {
     position: absolute;
     top: 0;
     left: 0;
-  }
-  .topnav {
-    display: block;
-  }
-
-  a #title-image {
-    padding: 0;
-    position: absolute;
-    top: 1em;
-    left: 1em;
+    width: 7em !important;
+    padding: 0.5em;
   }
 
-  .hamburger {
+  .dropdown-btn i {
     float: right;
-    text-align: right;
+    font-size: 1.4em;
+    padding-top: 0.3em;
+    padding-right: 0.5em;
+  }
+
+  .topnav a, .dropdown-btn {
+    text-decoration: none;
+    font-family: 'Inconsolata', monospace;
+    margin: 0;
+    padding: 0.15em 0em 0.15em 0em;
+    font-size: 1.8em;
+    color: black;
     display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    outline: none;
+  }
+  
+  .topnav a:hover, .dropdown-btn:hover {
+    color: black;
+  }
+  
+  .active {
+    color: blue;
+  }
+  
+  .dropdown-container {
+    display: none;
+    padding: 1em 0em 1em 1em;
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-left-color: blue;
+  }
+
+  .dropdown-container.main-dropdown {
+    border-style: none !important;
+    padding-bottom: 0;
+  }
+  
+  .responsive-image:first-child {
+    margin-left: 0em !important;
+    margin-top: 10em;
+  }
+  
+  .responsive-image {
+    display: block;
+    width: 100%;
+    height: auto;
+    cursor: pointer;
+    padding: 1em;
+  }
+
+  .embed-container {
+    display: block; 
+    padding: 4em 2em 4em 2em;
+    width: 100vw;
+    height: 60vh; 
+    overflow: hidden; 
+  }
+  
+  .embed-container:first-child {
+    margin-left: 0em !important;
+    margin-top: 10em;
+  }
+  
+  .embed-container iframe, .embed-container object, .embed-container embed { 
+    width: 100%; 
+    height: 100%;
+  }
+
+  .sketch-container {
+    display: block;
+    padding: 2em 1em 2em 1em;
+    width: 100vw;
+    height: 90vh;
+    overflow: hidden;
+  }
+  
+  .sketch-container:first-child {
+    margin-left: 0em !important;
+    margin-top: 10em;
+  }
+  
+  .sketch-container iframe, .sketch-container object, .sketch-container embed { 
+    width: 100%; 
+    height: 100%; 
+  }
+
+  .about-container {
+    margin: 0;
+    margin-top: 7em;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-content {
+    order: 1;
+    display: block;
+    font-size: 1.6em;
+    white-space: normal;
+    max-width: 100vw;
+    width: 100vw !important;
+    margin: 0;
+    padding: 1em;
+  }
+
+  .about-media {
+    order: 2;
+    padding: 1em;
+    display: grid;
+    grid-template-columns: 1fr 10em;
+  }
+  
+  .about-image {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    float: left;
+    width: 100%;
+    max-width: 50em;
+  }
+  
+  .icon-container {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  
+  .about-media #icon {
+    float: right;
+    width: 100%;
+    padding-right: 1.5em;
+    margin: 1em;
+  }
+
+  .about-content h1 {
+    margin-top: 0;
+  }
+
+  .blog-container {
+    padding: 1em;
+    margin-left: 0em;
+    margin-top: 7em;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
   }
 }
