--- a/style.css
+++ b/style.css
@@ -20,8 +20,31 @@ body {
   box-sizing: border-box;
 }
 
+main a {
+  background-color: blue;
+  text-decoration: none;
+  color: white;
+}
+
+main a:hover {
+  background-color: yellow;
+  color: blue;
+}
+
+main a:visited {
+  background-color: yellow;
+  color: blue;
+}
+
 /*-------------------- Specific divs --------------------*/
 
+body.scroll-vertical {
+  overflow-x: hidden; 
+  overflow-y: scroll !important; 
+  width: 100vw; 
+  white-space: normal; 
+  height: 100vh;
+}
 .sidenav-wrapper {
   padding: 1em 1em 1em 1em;
   height: 100%;
@@ -158,7 +181,22 @@ a #title-image {
 .blog-image {
   width: 100%;
   display: block;
+}
 
+.project-container {
+  margin-left: 18em;
+  margin-top: 2em;
+  width: 60vw;
+  font-size: 1.6em;
+  white-space: normal;
+  margin-bottom: 2em;
+}
+
+.project-media {
+  width: 100%;
+  display: block;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .about-container {
@@ -402,5 +440,15 @@ a #title-image {
     width: 100vw;
     display: flex;
     flex-direction: column;
+  }
+
+  .project-container {
+    margin-left: 0em;
+    margin-top: 7em;
+    width: 100vw;
+    font-size: 1.6em;
+    white-space: normal;
+    margin-bottom: 0em;
+    padding: 1em;
   }
 }
