--- a/style.css
+++ b/style.css
@@ -273,6 +273,26 @@ a #title-image {
   display: none;
 }
 
+.link-container {
+  margin-left: 18em;
+  margin-top: 2em;
+  display: block;
+}
+
+.link-container a {
+  font-size: 1.6em;
+}
+
+.link-container ul {
+  list-style-type: none;
+}
+
+.link-container li {
+  padding-bottom: 1em;
+}
+
+
+
 @media screen and (max-width: 850px) {
   .sidenav-wrapper {
     display: none;
@@ -473,5 +493,10 @@ a #title-image {
     white-space: normal;
     margin-bottom: 0em;
     padding: 1em;
+  }
+
+  .link-container {
+    margin-left: 0em;
+    padding-top: 7em;
   }
 }
