--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
 /*-------------------- Basic Elements --------------------*/
 
-html {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
   padding: 0;
+}
+
+html {
   font-family: 'Inconsolata', monospace;
   font-size: 10px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   overflow-x: scroll;
   overflow-y: hidden;
   height: 100vh;
   white-space: nowrap;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 main a {
@@ -45,6 +46,7 @@ body.scroll-vertical {
   white-space: normal; 
   height: 100vh;
 }
+
 .sidenav-wrapper {
   padding: 1em 1em 1em 1em;
   height: 100%;
