--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-/*-------------------- Basic Elements --------------------*/
-
 * {
   box-sizing: border-box;
+}
+
+html {
+  font-family: 'Roboto', sans-serif;
+  font-size: 10px;
 }
 
 html, body {
@@ -9,496 +12,118 @@ html, body {
   padding: 0;
 }
 
-html {
-  font-family: 'Inconsolata', monospace;
-  font-size: 10px;
+#page-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  
+  background-image: url('images/menu/slit-scan.jpg');
+  background-color: white;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: auto 70vh;
+  
+  z-index: -2;
+  text-transform: uppercase;
 }
 
-body {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  height: 100vh;
-  white-space: nowrap;
-}
-
-main a {
-  background-color: blue;
-  text-decoration: none;
-  color: white;
-}
-
-main a:hover {
-  background-color: yellow;
-  color: blue;
-}
-
-main a:visited {
-  background-color: yellow;
-  color: blue;
-}
-
-/*-------------------- Specific divs --------------------*/
-
-body.scroll-vertical {
-  overflow-x: hidden; 
-  overflow-y: scroll !important; 
-  width: 100vw; 
-  white-space: normal; 
-  height: 100vh;
-}
-
-.sidenav-wrapper {
-  padding: 1em 1em 1em 1em;
+#image-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  width: 15em;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: auto 70vh;
+  mix-blend-mode: difference;
+}
+
+header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-  overflow-x: hidden;
-  -webkit-transition: background-color 0.4s; /* Safari */
-  transition: background-color 0.4s;
-}
-
-.sidenav-wrapper:hover {
-  background-color: white;
-}
-
-.sidenav {
-  margin: 0;
-  padding: 2em 0 0 0;
-}
-
-.sidenav a, .dropdown-btn, .title {
-  text-decoration: none;
-  font-family: 'Inconsolata', monospace;
-  margin: 0;
-  padding: 0.15em 0em 0.15em 0em;
-  font-size: 1.8em;
-  color: black;
-  display: block;
-  border: none;
-  background: none;
   width: 100%;
-  text-align: left;
-  outline: none;
-}
-
-.title {
-  margin: 0;
-  padding: 0;
-  font-size: 3.8em;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  width: 3em;
-}
-
-a #title-image {
-  position: absolute;
-  bottom: 0;
-  width: 13em !important;
-  padding-bottom: 3em;
-}
-
-.sidenav a:hover, .dropdown-btn:hover, .title:hover {
-  color: blue;
-}
-
-.active {
-  color:blue;
-}
-
-.dropdown-container {
-  display: none;
-  padding: 2em 0em 2em 1em;
-  border-left-style: solid;
-  border-left-width: 1px;
-  border-left-color: blue;
-}
-
-.responsive-image:first-child {
-  margin-left: 18em !important;
-}
-
-.responsive-image {
-  display: inline-block;
-  height: 100vh;
-  width: auto;
-  cursor: pointer;
-  padding: 4em 2em 4em 2em;
-}
-
-.embed-container {
-  display: inline-block; 
-  padding: 4em 2em 4em 2em;
-  width: 80vw;
-  height: 100vh; 
-  overflow: hidden; 
-}
-
-.embed-container:first-child {
-  margin-left: 18em !important;
-}
-
-.embed-container iframe, .embed-container object, .embed-container embed { 
-  width: 100%; 
-  height: 100%; 
-}
-
-.sketch-container {
-  display: inline-block;
-  padding: 0;
-  width: 80vw;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.sketch-container:first-child {
-  margin-left: 18em !important;
-}
-
-.sketch-container iframe, .sketch-container object, .sketch-container embed { 
-  width: 100%; 
-  height: 100%; 
-}
-
-.blog-container {
-  margin-left: 18em;
-  margin-top: 2em;
-  width: 60vw;
+  height: 75px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+
+  margin: 0;
+  padding: 2em 3em 0em 3em;
+  color: white;
 }
 
-.blog-entry {
+#title-image {
+  height: 3em;
+}
+
+header>a {
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 2em;
+  color: black;
+  mix-blend-mode: difference;
+}
+
+header>a:hover {
+  text-decoration: line-through;
+  text-decoration-color: gold;
+}
+
+main {
+  padding-top: 0px;
   width: 100%;
-  font-size: 1.6em;
-  white-space: normal;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: lightgrey;
-  margin-bottom: 5em;
+  min-height: 100vh;
+  display: flex;
 }
 
-.blog-image {
-  width: 100%;
-  display: block;
-}
-
-.project-container {
-  margin-left: 18em;
-  margin-top: 2em;
-  width: 60vw;
-  font-size: 1.6em;
-  white-space: normal;
-  margin-bottom: 2em;
-}
-
-.project-media {
-  width: 100%;
-  display: block;
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
-.about-container {
-  margin-left: 18em;
-  margin-top: 2em;
-  width: 85vw;
-  height: 90vh;
-  display: grid;
-  grid-template-rows: 50% 1fr;
-  grid-template-columns: 28em 1fr;
-  grid-template-areas:
-    "image content"
-    "icons content"
-}
-
-.about-image {
-  grid-area: image;
-  float: right;
-  width: 30em;
-}
-
-.icon-container {
-  grid-area: icons;
-  float: right;
-}
-
-.about-media #icon {
-  float: right;
-  width: 10%;
-  max-width: 5em;
+nav {
+  margin: auto;
   padding: 0;
-  margin: 1em;
+  align-items: center;
 }
 
-.about-content {
-  grid-area: content;
-  width: 60%;
-  max-width: 20em;
-  margin-left: 2em;
-  font-size: 1.6em;
-  white-space: normal;
-  float: left;
+nav ol {
+  list-style: none;
+  counter-reset: counter;
+  padding: 0;
+  margin: 0;
 }
 
-.about-content h1 {
-  margin-top: 0;
+nav ol li {
+  counter-increment: counter;
+  font-size: 5em;
+  font-weight: 600;
+  margin: 0;
+  padding: 0.2em 0 0.2em 0;
 }
 
-.sketch-widget {
-  width: 320px;
-  height: 340px;
-  padding: 10px;
-  box-shadow: 7px 7px 10px grey;
-  background-color: lightgrey;
-  border-style: solid;
-  border-width: 1px;
-  color: blue;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  font-size: 1.4em;
-  z-index: 0;
+nav ol li::before {
+  font-family: 'IBM Plex Mono', monospace;
+  content: counter(counter) ". ";
+  color: black;
+  font-weight: 200;
+  font-size: 0.25em;
 }
 
-.top {z-index: 2; position: relative}
-.bottom {z-index: 1; position: relative}
-
-.sketch-widget>iframe {
-  position: relative;
-  left: -10px;
+a.nav-option {
+  text-decoration: none;
+  color: white;
+  mix-blend-mode: difference;
 }
 
-
-.topnav-wrapper {
-  display: none;
+a.nav-option:hover {
+  text-decoration: line-through;
+  text-decoration-color: gold;
 }
 
-.link-container {
-  margin-left: 18em;
-  margin-top: 2em;
-  display: block;
-}
-
-.link-container a {
-  font-size: 1.6em;
-}
-
-.link-container ul {
-  list-style-type: none;
-}
-
-.link-container li {
-  padding-bottom: 1em;
-}
-
-
+/* Mobile/Tablet -----------------------------------------------------------------------*/
 
 @media screen and (max-width: 850px) {
-  .sidenav-wrapper {
-    display: none;
-  }
 
-  body { 
-    overflow-x: hidden;
-    overflow-y: scroll !important;
-    width: 100vw;
-    white-space: wrap;
-    height: 100vh;
-  }
-
-  .topnav-wrapper {
-    display: block;
-    margin: 0;
-    padding: 0.5em;
-    padding-bottom: 1.2em;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-color: white;
-  }
-  
-  .topnav {
-    margin: 0;
-    padding: 0;
-  }
-  
-  a #title-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 7em !important;
-    padding: 0.5em;
-  }
-
-  .dropdown-btn i {
-    float: right;
-    font-size: 1.4em;
-    padding-top: 0.3em;
-    padding-right: 0.5em;
-  }
-
-  .topnav a, .dropdown-btn {
-    text-decoration: none;
-    font-family: 'Inconsolata', monospace;
-    margin: 0;
-    padding: 0.15em 0em 0.15em 0em;
-    font-size: 1.8em;
-    color: black;
-    display: block;
-    border: none;
-    background: none;
-    width: 100%;
-    text-align: left;
-    outline: none;
-  }
-  
-  .topnav a:hover, .dropdown-btn:hover {
-    color: black;
-  }
-  
-  .active {
-    color: blue;
-  }
-  
-  .dropdown-container {
-    display: none;
-    padding: 1em 0em 1em 1em;
-    border-left-style: solid;
-    border-left-width: 1px;
-    border-left-color: blue;
-  }
-
-  .dropdown-container.main-dropdown {
-    border-style: none !important;
-    padding-bottom: 0;
-  }
-  
-  .responsive-image:first-child {
-    margin-left: 0em !important;
-    margin-top: 10em;
-  }
-  
-  .responsive-image {
-    display: block;
-    width: 100%;
-    height: auto;
-    cursor: pointer;
-    padding: 1em;
-  }
-
-  .embed-container {
-    display: block; 
-    padding: 4em 2em 4em 2em;
-    width: 100vw;
-    height: 60vh; 
-    overflow: hidden; 
-  }
-  
-  .embed-container:first-child {
-    margin-left: 0em !important;
-    margin-top: 10em;
-  }
-  
-  .embed-container iframe, .embed-container object, .embed-container embed { 
-    width: 100%; 
-    height: 100%;
-  }
-
-  .sketch-container {
-    display: block;
-    padding: 2em 1em 2em 1em;
-    width: 100vw;
-    height: 90vh;
-    overflow: hidden;
-  }
-  
-  .sketch-container:first-child {
-    margin-left: 0em !important;
-    margin-top: 10em;
-  }
-  
-  .sketch-container iframe, .sketch-container object, .sketch-container embed { 
-    width: 100%; 
-    height: 100%; 
-  }
-
-  .about-container {
-    margin: 0;
-    margin-top: 7em;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .about-content {
-    order: 1;
-    display: block;
-    font-size: 1.6em;
-    white-space: normal;
-    max-width: 100vw;
-    width: 100vw !important;
-    margin: 0;
-    padding: 1em;
-  }
-
-  .about-media {
-    order: 2;
-    padding: 1em;
-    display: grid;
-    grid-template-columns: 1fr 10em;
-  }
-  
-  .about-image {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    float: left;
-    width: 100%;
-    max-width: 50em;
-  }
-  
-  .icon-container {
-    grid-column-start: 2;
-    grid-column-end: 3;
-  }
-  
-  .about-media #icon {
-    float: right;
-    width: 100%;
-    padding-right: 1.5em;
-    margin: 1em;
-  }
-
-  .about-content h1 {
-    margin-top: 0;
-  }
-
-  .blog-container {
-    padding: 1em;
-    margin-left: 0em;
-    margin-top: 7em;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .project-container {
-    margin-left: 0em;
-    margin-top: 7em;
-    width: 100vw;
-    font-size: 1.6em;
-    white-space: normal;
-    margin-bottom: 0em;
-    padding: 1em;
-  }
-
-  .link-container {
-    margin-left: 0em;
-    padding-top: 7em;
-  }
 }
