--- a/style.css
+++ b/style.css
@@ -239,17 +239,24 @@ main.project-wrapper {
   text-decoration-color: gold;
 }
 
-#about {
-  width: 40vh;
-  min-width: 600px;
-  margin: auto;
-}
-
 .about-content {
-  padding-top: 75px;
-  padding-bottom: 200px;
+  width: 50vw;
+  margin: auto;
+  padding: 75px 0 200px 0;
   mix-blend-mode: difference;
   color: white;
+}
+
+.about-content img {
+  width: 100%;
+  height: auto;
+}
+
+.about-content h1 {
+  font-size: 5em; /**/
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 50px;
 }
 
 .about-content ol {
@@ -257,12 +264,6 @@ main.project-wrapper {
   counter-reset: about-counter;
   padding: 0;
   margin: 0;
-}
-
-.about-content ol li:first-of-type {
-  font-size: 5em;
-  font-weight: 600;
-  text-transform: uppercase;
 }
 
 .about-content ol li {
@@ -514,18 +515,24 @@ main.project-wrapper {
     text-decoration-color: gold;
   }
   
-  #about {
-    margin: auto;
-  }
-  
   .about-content {
     width: 60vw;
-    min-width: 400px; /**/
-    margin: auto; /**/
-    padding-top: 150px; /**/
-    padding-bottom: 200px;
+    margin: auto;
+    padding: 150px 0 200px 0;
     mix-blend-mode: difference;
     color: white;
+  }
+  
+  .about-content img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .about-content h1 {
+    font-size: 4em; /**/
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 50px;
   }
   
   .about-content ol {
@@ -535,15 +542,9 @@ main.project-wrapper {
     margin: 0;
   }
   
-  .about-content ol li:first-of-type {
-    font-size: 4.5em; /**/
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-  
   .about-content ol li {
     counter-increment: about-counter;
-    font-size: 3em;
+    font-size: 2.5em;
     text-transform: none;
     margin: 0;
     padding: 10px 0 10px 0;
@@ -765,21 +766,24 @@ main.project-wrapper {
     text-decoration-color: gold;
   }
   
-  #about {
-    width: 100vw; /**/
-    min-width: 100vw; /**/
-    margin: auto;
-  }
-  
   .about-content {
-    width: 100vw; /**/
-    min-width: 100vw; /**/
-    max-width: 100vw; /**/
-    margin: auto; /**/
-    padding: 90px 10px 50px 10px; /**/
+    width: 90vw;
+    margin: auto;
+    padding: 100px 0 50px 0;
     mix-blend-mode: difference;
     color: white;
-    z-index: -1;
+  }
+  
+  .about-content img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .about-content h1 {
+    font-size: 3em; /**/
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 50px;
   }
   
   .about-content ol {
@@ -789,15 +793,9 @@ main.project-wrapper {
     margin: 0;
   }
   
-  .about-content ol li:first-of-type {
-    font-size: 3.5em; /**/
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-  
   .about-content ol li {
     counter-increment: about-counter;
-    font-size: 2em;
+    font-size: 1.5em;
     text-transform: none;
     margin: 0;
     padding: 10px 0 10px 0;
